-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Valhalla adds a check if object is a value type before synchronization. As result it causes not working lock coarsening optimization.
For example: performance of small uncontended locks got 2x times slowdown.
Benchmarks: http://cr.openjdk.java.net/~skuksenko/valhalla/legacy/benchmarks/
compare: Lock: singleLock vs Lock.doubleLock
For example: performance of small uncontended locks got 2x times slowdown.
Benchmarks: http://cr.openjdk.java.net/~skuksenko/valhalla/legacy/benchmarks/
compare: Lock: singleLock vs Lock.doubleLock
- duplicates
-
JDK-8222149 [lworld] Value type check/guard before synchronization is not hoisted out of the loop
-
- Closed
-
-
JDK-8206905 [lworld] Improve handling of monitorenter on value type
-
- Closed
-