8222148: [lworld] Value type check(guard) causes not working lock coarsening optimization

Reviewed-by: thartmann